--- a/Practical work№1/Task3/Converting decimal numbers/Converting decimal numbers/Converting decimal numbers.csproj
+++ b/Practical work№1/Task3/Converting decimal numbers/Converting decimal numbers/Converting decimal numbers.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>Converting_decimal_numbers</RootNamespace>
     <Nullable>enable</Nullable>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<DocumentationFile>bin\Debug\net8.0-windows\comments.xml</DocumentationFile>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
