--- a/Practical work№2/Task1/GCDAlgorithms/GCDAlgorithms/GCDAlgorithms.csproj
+++ b/Practical work№2/Task1/GCDAlgorithms/GCDAlgorithms/GCDAlgorithms.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D851D28F-B42F-4039-9203-AC6C6FE247A5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>GCDAlgorithms</RootNamespace>
-    <AssemblyName>GCDAlgorithms</AssemblyName>
+    <AssemblyName>NOD</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -33,6 +33,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -94,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
